--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,10 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
+    "react-alert-template-mui": "^1.0.7",
+    "react-alert-template-oldschool-dark": "^1.0.1",
     "react-axios": "^2.0.5",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
